[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["sisana"]

[project]
name = "sisana"
authors = [
    {name = "Nolan Newman", email = "nolan.newman@ncmm.uio.no"},
]
version = "1.2.0"
description = "A command line interface tool to reconstruct and analyze single sample networks."
readme = "README.md"
requires-python = "==3.9.19"
dependencies = [
    "numpy",
    "pandas",
]

[project.scripts]
sisana = "sisana.sisana:cli"

[project.urls]
Repository = "https://github.com/newmanno/sisana"